test/parse_errors/nonexisting_compare.go
package main

import "fmt"

func main(){
    var b bool = 4= 2
}